@@ -1,5 +1,10 @@
 2004-10-31  Andrew Cagney  <cagney@gnu.org>
 
+	* mips-tdep.c (mips_ignore_helper): Delete.
+	* config/mips/tm-mips.h (DEPRECATED_IGNORE_HELPER_CALL): Delete.
+	* infrun.c (handle_inferior_event): Delete #ifdef
+	DEPRECATED_IGNORE_HELPER_CALL code.
+
 	* config/mips/tm-mips.h (RA_REGNUM): Delete.
 
 2004-10-31  Mark Kettenis  <kettenis@gnu.org>
